--- a/index.html
+++ b/index.html
@@ -2,17 +2,85 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food network</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Food network</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <section>
+  <div>
+    <ul id="navbar">
+      <li><a href="# " target="_blank">Home</a></li>
+      <li><a href="# " target="_blank">About</a></li>
+      <li><a href="# " target="_blank">Services</a></li>
+      <li><a href="#"">Blog</a></li>
+      <li><a href=" #">Contact Us</a></li>
+    </ul>
+  </div>
+  <section class="flexible-container">
+    <div class="half-width">
+      <h1><span class="orange-color">Skip</span> The Diet,<br>Eating all for<br>Food Village </h1>
+      <p>Think positivelu and exersise daily eat healthy work hard. Stay storong bulild faith worry less read more be
+        happy relax love.
+      </p><br>
+      <a class="button" href="https://web.facebook.com/shahariyer.as/" target="_blank">Order Food</a>
+    </div>
+    <div class="food-image"><img src="image/Group 8425.png" alt="">
+    </div>
+  </section>
+  <section class="my-blog">
+    <div class="personal-img">
+      <img src="image/Person Image.png" alt="">
+    </div>
+    <div class="about">
+      <h2>About Me</h2>
+      <p>I"am professional foodies specialist. If you want ealty wealth you will take hard work</p> <br> <br>
+      <a class="button" href="https://web.facebook.com/shahariyer.as/" target="-blank">Contact Me</a>
+    </div>
+  </section>
+  <section>
+    <div class="section blog_section">
+      <div class="section_title">
+        <h1>My Recipies</h1>
+        <p>
+          French fries,Rice,Mashed potatoes,chicken bbq,chikcen grill & so on...
+        </p>
+      </div>
+      <div class="recipies_blog">
+        <div class="blog_details">
+          <img src="image/food/Project Cover.jpg" alt="french-fries" />
+          <h2>French Fries</h2>
+          <p>
+            Keep your friends close and your fries closer..
+          </p>
+        </div>
+        <div class="blog_details">
+          <img src="image/food/Project Cover.png" alt="rice" />
+          <h2>Rice</h2>
+          <p>
+            Rice is great if you're really hungry and want to eat two thousand of something.
+          </p>
+        </div>
+        <div class="blog_details">
+          <img src="image/food/Project Cover1.jpg" alt="mashed-potato" />
+          <h2>Mashed Potatoes</h2>
+          <p>
+            If you love good, old fashioned mashed potatoes this is the perfect recipe. Simple and delicious.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer id="lastpart">
+    <h2 id="foot"> <span class="orange-color">FOOD </span> VILLEGE</h2>
+    <small>Eat healthy to live healthy.Live healthy to live happy.</small>
+  </footer>
 
-    </section>
 </body>
 
 </html>
