--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
   <div>
     <ul id="navbar">
-      <li><a href="# " target="_blank">Home</a></li>
-      <li><a href="# " target="_blank">About</a></li>
-      <li><a href="# " target="_blank">Services</a></li>
-      <li><a href="#"">Blog</a></li>
-      <li><a href=" #">Contact Us</a></li>
+      <li><a href="#" target="_blank">Home</a></li>
+      <li><a href="#" target="_blank">About</a></li>
+      <li><a href="#" target="_blank">Services</a></li>
+      <li><a href="#" target="_blank">Blog</a></li>
+      <li><a href="#" target="_blank">Contact Us</a></li>
     </ul>
   </div>
   <section class="flexible-container">
