added footer color

--- a/index.html
+++ b/index.html
@@ -39,38 +39,38 @@
     </div>
     <div class="about">
       <h2>About Me</h2>
-      <p>I"am professional foodies specialist. If you want ealty wealth you will take hard work</p> <br> <br>
+      <p>I'm professional food worker and diet controller. I can help u all</p> <br> <br>
       <a class="button" href="https://web.facebook.com/shahariyer.as/" target="-blank">Contact Me</a>
     </div>
   </section>
   <section>
-    <div class="section blog_section">
-      <div class="section_title">
+    <div id="section-blog">
+      <div class="section-design">
         <h1>My Recipies</h1>
         <p>
-          French fries,Rice,Mashed potatoes,chicken bbq,chikcen grill & so on...
+          Potato salad , fish kari, birani, kacchi,chicken and chicken grill and etc. more
         </p>
       </div>
-      <div class="recipies_blog">
-        <div class="blog_details">
+      <div class="recipies-blog">
+        <div class="blog-customize">
           <img src="image/food/Project Cover.jpg" alt="french-fries" />
-          <h2>French Fries</h2>
+          <h2>chocklate dosa</h2>
           <p>
-            Keep your friends close and your fries closer..
+            chocolate dosa good for diet...
           </p>
         </div>
-        <div class="blog_details">
+        <div class="blog-customize">
           <img src="image/food/Project Cover.png" alt="rice" />
-          <h2>Rice</h2>
+          <h2>Chicken soup</h2>
           <p>
-            Rice is great if you're really hungry and want to eat two thousand of something.
+            Soop is veri kellorical food for diet and for good health.
           </p>
         </div>
-        <div class="blog_details">
+        <div class="blog-customize">
           <img src="image/food/Project Cover1.jpg" alt="mashed-potato" />
-          <h2>Mashed Potatoes</h2>
+          <h2>Beef masala</h2>
           <p>
-            If you love good, old fashioned mashed potatoes this is the perfect recipe. Simple and delicious.
+            Every body loves its beef masala.
           </p>
         </div>
       </div>
